@@ -1,6 +1,10 @@
+Tue Jun  9 12:31:25 2015  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>
+
+	* lib/prime.rb: Simplify and optimize EratosthenesSieve
+
 Tue Jun  9 11:45:00 2015  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>
 
-	* lib/matrix.rb: Simplify and optimize EratosthenesSieve
+	* lib/prime.rb: Simplify and optimize EratosthenesSieve
 	  based on patch by Ajay Kumar. [Fixes GH-921]
 
 Mon Jun  8 05:09:58 2015  Koichi Sasada  <ko1@atdot.net>
